@@ -9,6 +9,7 @@ copyright_year   = 2013
 stopwords = destructor
 stopwords = fatpacking
 stopwords = interoperability
+stopwords = linearized
 
 
 [RemovePrereqs]
