@@ -10,6 +10,9 @@ Revision history for Class-Tiny
     - constructor and destructors are slightly faster when there
       are no superclasses except Class::Tiny::Object
 
+    - linearized @ISA and other items are cached for speed when
+      the first object is created
+
 0.006     2013-09-05 11:56:48 America/New_York
 
     [ADDED]
